# the-lab-academy

./: .env  .env.example  .gitignore  README.md  index.html  index.tsx  package-lock.json  package.json  tailwind.config.ts  vercel.json  vite.config.ts  vitest.config.mjs  vitest.config.ts
backend/: .env  pyproject.toml  requirements.txt  test.db
backend/alembic/: env.py
backend/alembic/versions/: 20241010_0001_initial_schema.py
backend/api/: requirements.txt
backend/content/courses/data-structures/: _course.yml
backend/content/courses/ml-foundations/: _course.yml
backend/content/courses/ml-fundamentals/: _course.yml
backend/content/courses/python-basics/: _course.yml  getting-started.lesson  variables-types.lesson
backend/content/courses/sample-course/: _course.yml
backend/scripts/: e2e_cleanup.py  e2e_seed.py  integration_seed.py
backend/src/: dependencies.py  main.py
backend/src/api/v1/: auth.py  dashboard.py
backend/src/core/: config.py  security.py  supabase_client.py
backend/src/db/: session.py
backend/src/models/: enrollment.py  profile.py  user.py  user_activity_log.py  user_session.py
backend/src/routers/: auth_router.py
backend/src/schemas/: __init__.py  token.py
backend/src/services/: file_system_service.py  session_service.py
backend/tests/: test_auth.py  test_auth_router.py  test_lessons.py
backend/tests/core/: test_security.py
components/: Accordion.tsx  AnalyticsTracker.test.tsx  AnalyticsTracker.tsx  Button.test.tsx  Button.tsx  Card.tsx  CellRenderer.test.tsx  CellRenderer.tsx  CourseCard.tsx  CourseCardSkeleton.tsx  (+21 more)
(+554 files in other folders)
