[tool.poetry]
name = "the-lab-academy-backend"
version = "0.1.0"
description = "Backend API for The Lab Academy learning platform"
authors = ["The Lab Academy"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = "0.118.0"
uvicorn = { extras = ["standard"], version = "0.37.0" }
pydantic = { extras = ["email"], version = "2.11.10" }
pydantic-settings = "2.11.0"
python-dotenv = "1.1.1"
passlib = { extras = ["bcrypt"], version = "1.7.4" }
supabase = "2.21.1"
asyncpg = "0.30.0"
aiosqlite = "0.20.0"
psycopg2-binary = "2.9.10"
sqlalchemy = "2.0.43"
alembic = "1.16.5"
python-multipart = "0.0.20"
aiofiles = "23.2.1"
python-frontmatter = "1.0.0"
pyyaml = "6.0.3"
fastapi-cache2 = "0.2.1"
pyjwt = "2.10.1"
loguru = "0.7.0"
cachetools = "5.5.0"
slowapi = "0.1.9"
tenacity = "8.5.0"
pybreaker = "1.4.1"
email-validator = "2.1.0.post1"
cryptography = "42.0.8"
pytest = "8.4.2"
pytest-asyncio = "1.2.0"
pytest-cov = "4.1.0"
pytest-mock = "3.14.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
